--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "wasm-pack build --target web --out-dir pkg && rm -rf dist && mkdir dist && cp -r static/* dist && cp -r pkg dist/pkg"
+  command = "chmod +x ./netlify-build.sh && ./netlify-build.sh"
   publish = "dist"
 
 # (Optional) strong caching for WASM/JS; adjust as you prefer
