--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,10 @@
   [headers.values]
   Content-Type = "application/wasm"
   Cache-Control = "public, max-age=31536000, immutable"
+  
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
 
 [[headers]]
   for = "/pkg/*.js"
